# robometer

./: .gitignore  FINETUNE_ROBOMETER.md  fine_tune.sh  prepare_dataset.sh  pyproject.toml  train_gemini.bash
dataset_upload/: generate_hf_dataset.py  helpers.py
dataset_upload/dataset_loaders/: fetch_robot_loader.py  my_hdf5_loader.py
eval_commands/: confusion_matrix.sh  policy_ranking.sh  reward_alignment.sh
robometer/configs/: baseline_eval_config.yaml  eval_configs.py
robometer/configs/reward_model/: robodopamine.yaml  robodopamine_8b.yaml  topreward.yaml
robometer/data/scripts/: preprocess_datasets.py
robometer/evals/: run_baseline_eval.py
robometer/evals/baselines/: robodopamine.py  topreward.py
scripts/: fine_tune_custom.sh  inference.sh  prepare_data.sh
